Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/ClassIsAbstract.out
ClassIsAbstract.java:16:9: compiler.err.abstract.cant.be.instantiated: Abs
1 error
